[package]
name = "skar"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
dotenv = "0.15.0"
home = "0.5.9"
log = "0.4.21"
log4rs = "1.3.0"
openai_dive = "0.4.8"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
dotenv = "0.15.0"
